# project-group-magenta-mice

./: .env.sample  .gitattributes  .gitignore  .gitmodules  .graphqlrc.yml  .prettierignore  .prettierrc  .prettierrc.js  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  tsconfig.base.json  workspace.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: merge.yml  pull-request.yml
apps/backend/src/: main.ts
apps/backend/src/app/: app.controller.spec.ts  app.module.ts  app.service.spec.ts  app.service.ts  schema.gql
apps/data-generator/: .gitignore  Dockerfile  README.md  config.json  debug.sh  requirements.txt  run_data_gen.py  run_server.py  test_server.py
apps/data-generator/libs/: ExchangeClient.py  InsertOrder.py  LoginResponse.py  State.py  exchange_pb2.py  setup.py
apps/data-generator/src/: DataServer.py
apps/exchange/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  client.py  config.json  debug.sh  example-config.json  main.cc  quick.sh  readme.md  release.sh  spm.json
apps/exchange/clients/python/: client.py  exchange_pb2.py  log.py
apps/exchange/clients/ts/: README.md  package-lock.json  package.json  tsconfig.json
apps/exchange/clients/ts/src/: client.ts  exchange_pb.ts  index.ts  types.ts  util.ts  ws-client.ts
apps/exchange/example/cli/: .prettierrc.js  index.js  package-lock.json  package.json
apps/exchange/include/rapidjson/: document.h  license.txt
apps/exchange/libs/: CMakeLists.txt
apps/exchange/libs/common/: CMakeLists.txt  colors.h  reader.cc  reader.h  timer.cc  timer.h  types.cc  types.h  util.cc  util.h
apps/exchange/libs/config/: CMakeLists.txt  config.cc  config.h  config_reader.cc  config_reader.h
apps/exchange/libs/db/: CMakeLists.txt  connection.cc  connection.h
apps/exchange/libs/engine/: CMakeLists.txt  conversions.cc  conversions.h  exchange.cc  exchange.h  order_factory.cc  order_factory.h  orderbook.cc  orderbook.h  orderbook_manager.cc  orderbook_manager.h  participant.cc  participant.h  participant_manager.cc  participant_manager.h  requests.h
apps/exchange/libs/net/: CMakeLists.txt  exchange_runtime.cc  exchange_runtime.h  exchange_server.cc  exchange_server.h  message_parsing.cc  message_parsing.h  participant_socket.cc  participant_socket.h
apps/exchange/libs/protocol/: AsioAdapting.h  CMakeLists.txt  ProtobufHelpers.cpp  ProtobufHelpers.h  exchange.pb.cc  exchange.pb.h  exchange.proto
apps/exchange/messaging/js/: exchange_pb.js
apps/exchange/messaging/python/: exchange_pb2.py
apps/exchange/tests/: CMakeLists.txt  common_test.cc  config_reader_test.cc  config_test.cc  conversions_test.cc  exchange_runtime_test.cc  exchange_test.cc  integration_test.cc  message_parsing_test.cc  order_factory_test.cc  orderbook_test.cc  participant_test.cc  test_common.h
apps/exchange/tests/common_tests/: common_test.cc
apps/exchange/tests/engine_tests/: test_conversions.cc
apps/frontend/: jest.config.js  next.config.js  tailwind.config.js
apps/frontend-e2e/: .gitignore  cypress.env.sample.json  cypress.json
apps/frontend-e2e/plugins/: index.ts
apps/frontend/pages/: _app.tsx  _document.tsx  index.tsx  styles.css
apps/frontend/services/: firebase.ts
apps/frontend/specs/: exchange.spec.tsx  index.spec.tsx
apps/orchestrator/: .dockerignore  .env  .env.sample  Dockerfile  README.md  go.mod  go.sum
apps/orchestrator/api/: http.go
apps/orchestrator/docker/: client.go  exchange.go
apps/orchestrator/exchange/: model.go
apps/orchestrator/util/: port.go
libs/assets/: jest.config.js  project.json
libs/assets/src/: index.ts
libs/common/: jest.config.js  package.json  project.json
libs/components/: index.d.ts  jest.config.js  project.json  tailwind.config.js
libs/components/.storybook/: main.js  preview.js  tailwind-imports.css
libs/components/src/: index.ts
libs/database/: jest.config.js  project.json
libs/database/src/: index.ts
libs/gql/: codegen.yml  jest.config.js  project.json
libs/hooks/: jest.config.js  project.json
libs/hooks/src/: index.ts
libs/messaging/: README.md  jest.config.js  package.json  project.json
libs/messaging/src/: index.ts
media/logo/: logo.ai
prisma/: schema.prisma
prisma/migrations/20220315120029_init/: migration.sql
prisma/migrations/20220315121038_init/: migration.sql
prisma/migrations/20220326225040_bruce/: migration.sql
prisma/migrations/20220418052012_add_exchange/: migration.sql
prisma/migrations/20220418065828_permissions/: migration.sql
prisma/migrations/20220420041828_invite/: migration.sql
prisma/migrations/20220420051339_non_unique/: migration.sql
prisma/migrations/20220421074930_invite_relation/: migration.sql
prisma/migrations/20220421081101_secondary_invite_key/: migration.sql
prisma/migrations/20220421123908_exchange_name_colors/: migration.sql
prisma/migrations/20220428031451_user_email/: migration.sql
prisma/migrations/20220428035753_add_trades/: migration.sql
prisma/migrations/20220428094439_remove_unique_exchange_id/: migration.sql
prisma/migrations/20220429072843_api_key/: migration.sql
prisma/migrations/20220501101526_trade_table/: migration.sql
prisma/migrations/20220501224111_cascade_delete_instrument/: migration.sql
prisma/migrations/20220506040300_use_autoincrement_id_for_trade/: migration.sql
prisma/migrations/20220509093629_add_market_maker_key/: migration.sql
prisma/migrations/20220509224841_exchange_port/: migration.sql
tools/: DataGenerator.py  DataServer.py
tools/generators/: BondPriceGeneratorStrategy.py  DataGenerator.py  PriceGeneratorStrategy.py  StockPriceGeneratorStrategy.py  TrendManager.py
tools/scripts/: generate-index.js
tools/spm/: CHANGELOG.md  README.md  spm
tools/spm/spm-deps/: Dockerfile  spm-build
(+123 files in other folders)
